# yuki-voice-assistant

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  apps_linux.h  apps_macos.h  apps_windows.h  common.h  compile_commands.json  convert.sh  lora_fine_tuning.py  main.cpp  recognize_model.cpp  recognize_model.h  request.cpp  request.h  user_default_apps.h  websites_links.h
.cache/clangd/index/: main.cpp.913BE8BB0BDFA961.idx  miniaudio.h.434B4E781CA258C6.idx
data/: applications-windows.json  applications.json  context_training.csv  neural-netwok-training-data.json  often_mistakes.csv  scenarios.json  settings.json  train.jsonl  websites.json
src/: common.cpp  common.h  context-graph.cpp  context-graph.h  context_graph.cpp  context_graph.h  context_probability.cpp  context_probability.h  logging.h  main.cpp  neural-network.cpp  neural-network.h  phrase_recognizer.cpp  phrase_recognizer.h  recognize-model.cpp  recognize-model.h  recognize_model.cpp  request.h  voice-assistant.cpp  voice-assistant.h  voice_assistant.cpp  voice_assistant.h  worker.h
tests/: bla.cpp  context_graph_tests.cpp  nn-test.cpp  rapidfuzz_check.cpp  tests_functions.h  unit_tests.cpp
tests/outputs/: out.1  out1.txt
tests/recognize_model_tests/: main.cpp  phrases.h  vosk_api_recognize_model.cpp  vosk_api_recognize_model.h  vosk_wav_recognize.h  whisper_recognize_model.cpp  whisper_recognize_model.h  whisper_wav_recognize.h
